# wmata-dashboard

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  NOTES.md  README.md  analytics.py  check_valid_trips.py  collect_c53_data.py  collect_sample_data.py  continuous_collector.py  database.py  debug_directions.py  debug_otp.py  init_database.py  pyproject.toml  test_analytics.py  test_headway_detailed.py  test_otp.py  test_otp_with_matching.py  trip_matching.py  wmata_collector.py
analysis/: frequent_routes_audit.py  frequent_routes_audit_detail.py  run_quality.ipynb  run_quality.py
api/: README.md  __init__.py  aggregations.py  config.py  main.py
config/: frequent_routes.yaml  route_targets.yaml
debug/: analyze_match_rate.py  check_early_arrivals.py  check_gtfs_files.py  check_gtfs_shapes.py  check_valid_trips.py  compare_route_otp.py  debug_directions.py  debug_otp.py  debug_single_match.py  inspect_d80_headways.py  investigate_trip_matching.py  match_rate_detailed_analysis.md  quick_otp_test.py  test_average_speed.py  test_bus_positions.py  test_collect_bus_positions.py  test_headway_detailed.py  test_headways.py  test_otp_bus_positions.py  trace_vehicle_journey.py  validate_deviation.py  validate_trip_matching.py
docs/: DEPLOY.md  DEPLOYMENT.md  MIGRATIONS.md  OTP_METHODOLOGY.md  SESSION_SUMMARY.md
frontend/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
pipelines/: __init__.py  aggregate_runs.py  archive_trip_update_snapshots.py  archive_vehicle_positions.py  cleanup_trip_update_state.py  compare_old_vs_new_derivation.py  compare_stop_event_sources.py  compute_bunching.py  compute_daily_metrics.py  derive_stop_events.py  derive_stop_events_from_state.py  derive_stop_events_trip_updates.py  refresh_corridor_slip.py  refresh_corridors.py  refresh_cross_route_segments.py  refresh_route_diagnostic_profile.py  replay_archive_to_state.py  retain_trip_update_state.py  rotate_archive.py  run_daily_batch.py  stop_events_common.py  upsert_route_metrics_overlay.py  upsert_system_metrics_daily.py  window_derived_tables.py
scripts/: add_excess_trip_time_columns.py  add_trip_update_trip_snap_index.py  check_schema_drift.py  collect_sample_data.py  collector_status.py  continuous_collector.py  continuous_combined_collector.py  continuous_trip_updates_collector.py  create_route_headway_metrics_table.py  create_route_metrics_overlay_table.py  create_runs_table.py  create_stop_events_table.py  create_system_metrics_daily_table.py  generate_route_diagnosis.py  init_database.py  migrate_add_data_quality_columns.py  migrate_add_headway_metrics.py  migrate_add_service_date_to_state.py  migrate_add_shapes.py  migrate_all.py  migrate_complete_gtfs_schema.py  migrate_create_collector_heartbeats.py  migrate_create_corridor_slip_rollup.py  migrate_create_corridors.py  migrate_create_cross_route_segments.py  migrate_create_route_diagnosis_narrative.py  migrate_create_stop_events_v2.py  migrate_create_trip_update_state.py  migrate_drop_phase_f.py  migrate_route_diagnostic_profile.py  migrate_runs_endpoint_columns.py  migrate_runs_stops_observable.py  migrate_vehicle_positions.py  probe_dropped_tu_trips.py  probe_trip_updates.py  probe_trip_updates_timeseries.py  reload_gtfs_complete.py  run_gtfs_reload.py  update_trip_shapes.py
src/: analytics.py  archive_writer.py  batch_iterator.py  bunching.py  corridor_identity.py  data_completeness.py  database.py  date_ranges.py  diagnosis_hash.py  ewt.py  excess_trip_time.py  (+17 more)
(+144 files in other folders)
